--- a/src/app/list-employees/list-employees.component.html
+++ b/src/app/list-employees/list-employees.component.html
@@ -1,1 +1,45 @@
-<p>list-employees works!</p>
+<div class="container py-4">
+  <div class="row">
+    <div class="col-lg-10 mx-auto mb-4">
+      <div class="section-title text-center">
+        <h3 class="top-c-sep">Список сотрудников</h3>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-10 mx-auto">
+      <div class="mb-60">
+        <div class="form-container">
+          <div
+            class="box d-md-flex align-items-center justify-content-between mb-30"
+          >
+            <div class="left d-md-flex align-items-center flex-wrap">
+              <div
+                class="img-holder mr-md-4 mb-md-0 mb-4 mx-auto mx-md-0 d-md-none d-lg-flex"
+              >
+                <img class="img" src="assets/man.png" alt="" />
+              </div>
+              <div class="content d-flex ms-4">
+                <h5 class="text-center text-md-left">Фамилия Имя Отчество</h5>
+                <div
+                  class="d-md-flex gap-3 flex-wrap text-capitalize ff-open-sans mx-5"
+                >
+                  <div class="mr-md-4">Должность</div>
+                  <div class="mr-md-4">Отдел</div>
+                </div>
+              </div>
+            </div>
+            <div class="right my-4 flex-shrink-0">
+              <a
+                routerLink="/listDepartments"
+                class="btn d-block w-100 d-sm-inline-block btn-light"
+                >Открыть</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
