--- a/src/app/list-events/list-events.component.html
+++ b/src/app/list-events/list-events.component.html
@@ -1,1 +1,39 @@
-<p>list-events works!</p>
+<div class="container py-4">
+  <div class="row">
+    <div class="col-lg-10 mx-auto mb-4">
+      <div class="section-title text-center">
+        <h3 class="top-c-sep">Список мероприятий</h3>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-10 mx-auto">
+      <div class="mb-60">
+        <div class="form-container">
+          <div
+            class="box d-md-flex align-items-center justify-content-between mb-30"
+          >
+            <div class="left d-md-flex align-items-center flex-wrap">
+              <div class="content d-flex">
+                <h5 class="text-center text-md-left">Название мероприятия</h5>
+                <div
+                  class="d-md-flex gap-3 flex-wrap text-capitalize ff-open-sans mx-5"
+                >
+                  <div class="mr-md-4">Дата проведения</div>
+                  <div class="mr-md-4">Начало 8:00</div>
+                  <div class="mr-md-4">Конец 12:30</div>
+                </div>
+              </div>
+            </div>
+            <div class="right my-4 flex-shrink-0">
+              <a href="" class="btn d-block w-100 d-sm-inline-block btn-light"
+                >Открыть</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
