--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header
-  class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap justify-content-center p-0 shadow"
+  class="navbar sticky-top flex-md-nowrap justify-content-center p-0 header-bg"
 >
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="/"
+  <a class="navbar-brand text-color col-md-3 col-lg-2 me-0 px-3" href="/"
     >Neo Stack Technology</a
   >
 </header>
