--- a/src/app/list-departments/list-departments.component.css
+++ b/src/app/list-departments/list-departments.component.css
@@ -82,3 +82,15 @@
 .gap-10 {
   gap: 100px;
 }
+
+.custom-input {
+  padding: 6px;
+  border: 1px solid rgba(203, 213, 225, 1);
+  border-radius: 6px;
+  width: 250px;
+}
+.custom-button {
+  border: none;
+  background-color: rgba(202, 70, 49, 1);
+  color: #fff;
+}
