--- a/src/app/list-employees/list-employees.component.css
+++ b/src/app/list-employees/list-employees.component.css
@@ -57,3 +57,15 @@
 .mb-30 {
   margin-bottom: 30px;
 }
+
+.custom-input {
+  padding: 6px;
+  border: 1px solid rgba(203, 213, 225, 1);
+  border-radius: 6px;
+  width: 150px;
+}
+.custom-button {
+  border: none;
+  background-color: rgba(202, 70, 49, 1);
+  color: #fff;
+}
