--- a/src/app/list-events/list-events.component.html
+++ b/src/app/list-events/list-events.component.html
@@ -1,39 +1,191 @@
 <div class="container py-4">
   <div class="row">
-    <div class="col-lg-10 mx-auto mb-4">
+    <div class="col-lg-11 mx-auto mb-4">
       <div class="section-title text-center">
         <h3 class="top-c-sep">Список мероприятий</h3>
       </div>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-lg-10 mx-auto">
-      <div class="mb-60">
-        <div class="form-container">
-          <div
-            class="box d-md-flex align-items-center justify-content-between mb-30"
-          >
-            <div class="left d-md-flex align-items-center flex-wrap">
-              <div class="content d-flex">
-                <h5 class="text-center text-md-left">Название мероприятия</h5>
-                <div
-                  class="d-md-flex gap-3 flex-wrap text-capitalize ff-open-sans mx-5"
-                >
-                  <div class="mr-md-4">Дата проведения</div>
-                  <div class="mr-md-4">Начало 8:00</div>
-                  <div class="mr-md-4">Конец 12:30</div>
+  <form [formGroup]="FormEvent" (submit)="submit()">
+    <div class="row">
+      <div class="col-lg-11 mx-auto">
+        <div class="mb-60">
+          <div class="form-container">
+            <div
+              *ngFor="let event of EventService.getEvent(); let i = index"
+              class="box d-md-flex align-items-center justify-content-between mb-30"
+            >
+              <div class="left d-md-flex align-items-center flex-wrap">
+                <div class="content d-flex">
+                  <h5 class="text-center text-md-left">{{ event.name }}</h5>
+                  <div
+                    class="d-md-flex gap-3 flex-wrap text-capitalize ff-open-sans mx-5"
+                  >
+                    <div class="mr-md-4">Дата: {{ event.date }}</div>
+                    <div class="mr-md-4">Начало: {{ event.timeStart }}</div>
+                    <div class="mr-md-4">Конец: {{ event.timeEnd }}</div>
+                  </div>
                 </div>
               </div>
+              <div class="d-flex align-items-center gap-4">
+                <div class="right my-4 flex-shrink-0">
+                  <a
+                    href=""
+                    class="btn d-block w-100 d-sm-inline-block btn-light"
+                    >Открыть</a
+                  >
+                </div>
+                <button
+                  (click)="removeEvent(i)"
+                  class="btn d-block w-100 d-sm-inline-block btn-light custom-button"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    class="bi bi-trash"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
+                    />
+                    <path
+                      d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
+                    />
+                  </svg>
+                </button>
+              </div>
             </div>
-            <div class="right my-4 flex-shrink-0">
-              <a href="" class="btn d-block w-100 d-sm-inline-block btn-light"
-                >Открыть</a
-              >
+
+            <!-- <div
+              class="box d-md-flex align-items-center justify-content-between mb-30"
+            >
+              <div class="left d-md-flex align-items-center flex-wrap">
+                <div class="content d-flex">
+                  <h5 class="text-center text-md-left">Название мероприятия</h5>
+                  <div
+                    class="d-md-flex gap-3 flex-wrap text-capitalize ff-open-sans mx-5"
+                  >
+                    <div class="mr-md-4">Дата проведения</div>
+                    <div class="mr-md-4">Начало 8:00</div>
+                    <div class="mr-md-4">Конец 12:30</div>
+                  </div>
+                </div>
+              </div>
+              <div class="right my-4 flex-shrink-0">
+                <a href="" class="btn d-block w-100 d-sm-inline-block btn-light"
+                  >Открыть</a
+                >
+              </div>
+            </div> -->
+
+            <div
+              class="box d-md-flex align-items-center justify-content-between mb-30"
+            >
+              <div class="left d-md-flex align-items-center flex-wrap">
+                <div class="content d-flex">
+                  <div>
+                    <input
+                      type="text"
+                      name="NameEvent"
+                      placeholder="Название мероприятия"
+                      id="NameEvent"
+                      class="custom-input w-100"
+                      [formControl]="NameEventControl"
+                    />
+                    <div
+                      *ngIf="
+                        NameEventControl.invalid &&
+                        (NameEventControl.touched || NameEventControl.dirty) &&
+                        NameEventControl.hasError('required')
+                      "
+                      class="text-danger small position-absolute"
+                    >
+                      Обязательное поле
+                    </div>
+                  </div>
+                  <div
+                    class="d-md-flex gap-3 flex-wrap text-capitalize ff-open-sans mx-5"
+                  >
+                    <div>
+                      <input
+                        type="date"
+                        name="DateEvent"
+                        placeholder="Дата проведения"
+                        id="DateEvent"
+                        class="custom-input"
+                        [formControl]="DateEventContol"
+                      />
+                      <div
+                        *ngIf="
+                          DateEventContol.invalid &&
+                          (DateEventContol.touched || DateEventContol.dirty) &&
+                          DateEventContol.hasError('required')
+                        "
+                        class="text-danger small position-absolute"
+                      >
+                        Обязательное поле
+                      </div>
+                    </div>
+                    <div>
+                      <input
+                        type="time"
+                        name="TimeStartEvent"
+                        placeholder="Время начала"
+                        id="TimeStartEvent"
+                        class="custom-input"
+                        [formControl]="TimeStartEventControl"
+                      />
+                      <div
+                        *ngIf="
+                          TimeStartEventControl.invalid &&
+                          (TimeStartEventControl.touched ||
+                            TimeStartEventControl.dirty) &&
+                          TimeStartEventControl.hasError('required')
+                        "
+                        class="text-danger small position-absolute"
+                      >
+                        Обязательное поле
+                      </div>
+                    </div>
+                    <div>
+                      <input
+                        type="time"
+                        name="TimeEndEvent"
+                        placeholder="Время окончания"
+                        id="TimeEndEvent"
+                        class="custom-input"
+                        [formControl]="TimeEndEventControl"
+                      />
+                      <div
+                        *ngIf="
+                          TimeEndEventControl.invalid &&
+                          (TimeEndEventControl.touched ||
+                            TimeEndEventControl.dirty) &&
+                          TimeEndEventControl.hasError('required')
+                        "
+                        class="text-danger small position-absolute"
+                      >
+                        Обязательное поле
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="right my-4 flex-shrink-0">
+                <button
+                  type="submit"
+                  class="btn d-block w-100 d-sm-inline-block btn-light custom-button"
+                >
+                  Создать
+                </button>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </form>
 </div>
