--- a/src/app/list-vacancy/list-vacancy.component.html
+++ b/src/app/list-vacancy/list-vacancy.component.html
@@ -7,58 +7,154 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-lg-10 mx-auto">
-      <div class="mb-60">
-        <div class="form-container">
-          <div
-            class="box d-md-flex align-items-center justify-content-between mb-30"
-          >
-            <div class="left d-md-flex align-items-center flex-wrap">
-              <div class="content d-flex">
-                <h5 class="text-center text-md-left">Название должности</h5>
+  <form [formGroup]="FormVacancy" (submit)="submit()">
+    <div class="row">
+      <div class="col-lg-10 mx-auto">
+        <div class="mb-60">
+          <div class="form-container">
+            <div
+              *ngFor="let vacancy of VacancyService.getVacancy(); let i = index"
+              class="box d-md-flex align-items-center justify-content-between mb-30"
+            >
+              <div class="left d-md-flex align-items-center flex-wrap">
+                <div class="content d-flex">
+                  <h5 class="text-center text-md-left">
+                    Должность: {{ vacancy.name }}
+                  </h5>
+                </div>
+              </div>
+              <div class="right my-4 flex-shrink-0 d-flex gap-10">
+                <button
+                  (click)="removeVacancy(i)"
+                  type="button"
+                  class="btn custom-btn red-border"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    class="bi bi-trash"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
+                    />
+                    <path
+                      d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
+                    />
+                  </svg>
+                </button>
+                <button type="button" class="btn custom-btn blue-border">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    class="bi bi-pencil-square"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"
+                    />
+                    <path
+                      fill-rule="evenodd"
+                      d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"
+                    />
+                  </svg>
+                </button>
               </div>
             </div>
-            <div class="right my-4 flex-shrink-0 d-flex gap-10">
-              <button type="button" class="btn custom-btn red-border">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  fill="currentColor"
-                  class="bi bi-trash"
-                  viewBox="0 0 16 16"
+            <!-- <div
+              class="box d-md-flex align-items-center justify-content-between mb-30"
+            >
+              <div class="left d-md-flex align-items-center flex-wrap">
+                <div class="content d-flex">
+                  <h5 class="text-center text-md-left">Название должности</h5>
+                </div>
+              </div>
+              <div class="right my-4 flex-shrink-0 d-flex gap-10">
+                <button type="button" class="btn custom-btn red-border">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    class="bi bi-trash"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
+                    />
+                    <path
+                      d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
+                    />
+                  </svg>
+                </button>
+                <button type="button" class="btn custom-btn blue-border">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    class="bi bi-pencil-square"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"
+                    />
+                    <path
+                      fill-rule="evenodd"
+                      d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+             -->
+          </div>
+
+          <div class="form-container">
+            <div
+              class="box d-md-flex align-items-center justify-content-between mb-30"
+            >
+              <div class="left d-md-flex align-items-center flex-wrap">
+                <div class="content d-flex">
+                  <div>
+                    <input
+                      type="text"
+                      name="NameDepartment"
+                      placeholder="Название отдела"
+                      id="NameDepartment"
+                      class="custom-input"
+                      [formControl]="NameVacancyControl"
+                    />
+                    <div
+                      *ngIf="
+                        NameVacancyControl.invalid &&
+                        (NameVacancyControl.touched ||
+                          NameVacancyControl.dirty) &&
+                        NameVacancyControl.hasError('required')
+                      "
+                      class="text-danger small position-absolute"
+                    >
+                      Обязательное поле
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="right my-4 flex-shrink-0 d-flex gap-10">
+                <button
+                  type="submit"
+                  class="btn d-block w-100 d-sm-inline-block btn-light custom-button"
                 >
-                  <path
-                    d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
-                  />
-                  <path
-                    d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
-                  />
-                </svg>
-              </button>
-              <button type="button" class="btn custom-btn blue-border">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  fill="currentColor"
-                  class="bi bi-pencil-square"
-                  viewBox="0 0 16 16"
-                >
-                  <path
-                    d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"
-                  />
-                  <path
-                    fill-rule="evenodd"
-                    d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"
-                  />
-                </svg>
-              </button>
+                  Создать
+                </button>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </form>
 </div>
